Feat: Adds Identity Service

--- a/WebApp/eShield-API/appsettings.json
+++ b/WebApp/eShield-API/appsettings.json
@@ -1,9 +1,13 @@
 {
+  "ConnectionStrings": {
+    "eShieldConnection": "Server=tcp:gida.database.windows.net,1433;Initial Catalog=eShield;Persist Security Info=False;User ID=****;Password=*****;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+                                                                                                                                                                            "eShield_APIContextConnection": "Server=(localdb)\\mssqllocaldb;Database=eShield-API;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+   "AllowedHosts": "*"
 }
