Refactor: Modifies Database Connection String

--- a/WebApp/eShield-API/appsettings.json
+++ b/WebApp/eShield-API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "eShieldConnection": "Server=tcp:gida.database.windows.net,1433;Initial Catalog=eShield;Persist Security Info=False;User ID=****;Password=*****;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "eShieldConnection": "Server=tcp:projecteshield.database.windows.net,1433;Initial Catalog=eShield;Persist Security Info=False;User ID=eshield;Password=****;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
