Refactor: Moves Entity Files and Context to a Seperate Library

--- a/WebApp/eShield-API/eShield-API.csproj
+++ b/WebApp/eShield-API/eShield-API.csproj
@@ -22,8 +22,12 @@
 
   <ItemGroup>
     <Folder Include="Areas\Identity\Data\" />
-    <Folder Include="Entities\" />
+    <Folder Include="Controllers\" />
     <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\eShield.CoreData\eShield.CoreData.csproj" />
   </ItemGroup>
 
 </Project>
