Revert "Revert "Terry""
This reverts commit 29cefe6acf44ccf91a53ac67ff9c8b5e0e98cc4f.

--- a/WebApp/eShield-API/eShield-API.csproj
+++ b/WebApp/eShield-API/eShield-API.csproj
@@ -16,14 +16,17 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Areas\Identity\Data\" />
-    <Folder Include="Entities\" />
     <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\eShield.CoreData\eShield.CoreData.csproj" />
   </ItemGroup>
 
 </Project>
