Feat: Configures Logging

--- a/WebApp/eShield-API/appsettings.json
+++ b/WebApp/eShield-API/appsettings.json
@@ -8,5 +8,40 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-   "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\Home\\eShieldLog\\log.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": "2",
+          "shared": "true",
+          "flushToDiskInterval": "00:00:01"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "ApplicationName": "Serilog.WebApplication"
+    }
+  }
 }
