Refactor: Changes Professor DTO Property

--- a/WebApp/eShield-API/eShield-API.csproj
+++ b/WebApp/eShield-API/eShield-API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\eshield database\eshield database.sqlproj" />
     <ProjectReference Include="..\eShield.CoreData\eShield.CoreData.csproj" />
   </ItemGroup>
 
